Merge scip-kotlin into scip-java
Merges the scip-kotlin repository (semanticdb-kotlinc compiler plugin) into
scip-java so they live in a single repository. The kotlinc plugin is now
built locally and embedded as a resource into the scip-java CLI distribution
instead of being fetched from Maven at runtime.

Source merge:
- semanticdb-kotlinc/src/** — kotlinc plugin source (Kotlin 2.2.0)
- semanticdb-kotlinc/minimized/src/** — fixtures + golden snapshots

Build wiring (build.sbt + project/):
- New semanticdbKotlinc project (KotlinPlugin + sbt-assembly fat-jar with
  com.intellij.** shading, mirroring the previous Gradle shadowJar setup).
- New semanticdbKotlincMinimized project that compiles the Kotlin/Java
  fixtures with the locally-built plugin and exposes a kotlincSnapshots
  task that drives cli/runMain to (re)generate the golden snapshots.
- V.kotlinVersion bumped 2.1.20 -> 2.2.0 to match the merged plugin.
- V.semanticdbKotlin removed (no longer needed).
- V.semanticdbKotlincProtobuf added (3.17.3) so the kotlinc module keeps
  its own protobuf codegen version without perturbing scip-java.
- V.kotest, V.kctfork added for the kotlinc test suite.
- cli now ships semanticdb-kotlinc.jar alongside the other embedded jars.
- cli's Compile / run / fork is now true so ScipJava.main's System.exit
  cannot kill the surrounding sbt JVM during snapshot regeneration.
- project/SemanticdbKotlincKeys.scala adds the kotlincSnapshots taskKey
  (separately named to avoid collision with the existing snapshots test
  project).
- project/plugins.sbt picks up sbt-kotlin-plugin 3.1.6 and
  sbt-jupiter-interface 0.15.1.

Runtime wiring — replace runtime Maven resolution with embedded jar:
- Embedded.semanticdbKotlincJar(...) added.
- ScipBuildTool.compileKotlinFiles now takes tmp: Path and uses the
  embedded jar instead of resolving com.sourcegraph:semanticdb-kotlinc
  via Coursier. Two debug println calls removed.
- GradleBuildTool init script writes
  project.ext["semanticdbKotlinc